--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             margin: 0;
             padding: 0;
         }
+        canvas {
+          display: block;
+          margin: auto
+        }
     </style>
 </head>
 
